# toonloop

./: .description  .gitignore  .hgignore  AUTHORS  BUGS  CONTRIBUTING  ChangeLog  INSTALL.fedora  INSTALL.txt  Makefile  Makefile.am  NEWS  OSC  README  RELEASE  TODO  TODO.rst  ToonLoop.desktop  Toonloop.desktop  animate.py  autogen.sh  camLoop.py  camLoopOpenCV.py  configure.ac  copyright  dia_toonloop.dia  jpeg_to_movie  macloop.py  man_toonloop.txt  manpage_inc.txt  one_click_build.sh  proto_gst.py  proto_gtk.py  purepy-client  purepy-server  purity-client  purity-server  purity_fxloop.py  run  send_osc.py  (+14 more)
completion/: Makefile.am  toonloop
debian/: changelog  control  copyright  rules
doc/: ACTIONS.txt  DONE  INSTALL_ALL.txt  classes.dia  command_pattern.dia  cpp_projects.txt  dv-pipeline.sh  effects.txt  gst-pipeline.odg  hdv-pipeline.sh  how-to.html  how-to.txt  install_ubuntu_14.04.sh  midi_notes_and_controls.pd  midi_pedal.pd  midi_pedal_crash.txt  midi_test.pd  nice-to-have.txt  start_midi_fake_pedal.sh  start_midi_notes_and_controls.sh
examples/: README.txt  toon-lumakey-high-cut  toon-lumakey-low-cut
extra/: arduino-button.pde
m4/: ac_help2man.m4  ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_signals.m4  ax_boost_system.m4  ax_boost_unit_test_framework.m4  ax_python.m4
man/: Makefile.am  man-toonloop.txt
pipelines/: v4l2-rgb.sh  v4l2-xv.sh
pixmaps/: Makefile.am  toonloop_32x32.xpm
presets/: Makefile.am  midi.xml
proto/: Makefile  glading.cpp  gst_pixbuf.py  gstgltest.py  gui.py  otherview.glade  pil_looping.py  spawn.cpp  toonloop.glade
proto-gui/: gstgltest.py  toonloop.glade
prototypes/: README.txt  chroma_keying.py  ck_osc.ck  glCamera.py  gl_cam_ortho.py  gl_cam_shader.py  gl_font.py  i18n.cpp  joystick.py  jpeg_to_flv  midi.py  old_rss_gen.py  rss_parser.py  serialize_examplewq.py  toggle_fullscreen.py
prototypes/glsl/: WIP_keying.frag.glsl  keying.frag.glsl  keying.vert.glsl  keying_shader.pd  passthru.vert.glsl  shader.py  shader_and_tex.py  simpletexture_lesson06.py  teapot.py
prototypes/launcher/: Makefile  build.sh  foo.c  helper.c  main.cpp  spawn.c  spawn.cpp
prototypes/rats/: README.txt  glsl.py
rats/: __init__.py  flatconfig.py  fudi.py  glsl.py  glslang.py  glue.py  observer.py  osc.py  osc_protocol.py  parser.py  render.py  renderer.py  serialize.py  sig.py  statesaving.py
rats/purepy/: __init__.py  dynamic_patch.pd  obj.py
rats/purity/: __init__.py  client.py  dynamic_patch.pd  obj.py  server.py
rats/test/: test_flatconfig.py  test_parser.py  test_serialize.py  test_sig.py  test_statesaving.py
scripts/: fxloop  glslang-run  ituner  purity-client  purity-example.py  purity-server  send_ping  shadertester  strace_toonloop.sh  theitem  toondirwatch  toonget  toonweb
src/: Makefile.am  README.txt  action.cpp  action.h  application.cpp  application.h  brcosaeffect.cpp  brcosaeffect.h  check_properties.cpp  clip.cpp  clip.h  clutter-tools.cpp  clutter-tools.h  command.cpp  command.h  concurrentqueue.h  configuration.cpp  configuration.h  controller.cpp  controller.h  doxyfile.in  draw.cpp  draw.h  dummy.cpp  effect.c  effect.cpp  effect.h  glslang.cpp  glslang.h  gltools.cpp  gltools.h  gstgtk.h  gtkshare.cpp  gui.cpp  gui.h  image.cpp  image.h  image_importer.cpp  image_importer.h  infowindow.cpp  (+56 more)
src/shaders/: Makefile.am  brcosa.glsl
test/: test_main_loop.py  test_serialize.py
tests/: Makefile.am  check_bool.cpp  check_classes.cpp  check_commands.cpp  check_containers.cpp  check_datetime.cpp  check_files.cpp  check_image_importer.cpp  check_imageimporter.cpp  check_looper.cpp  check_midi.cpp  check_moviesaver.cpp  check_properties.cpp  check_signals.cpp  check_symlinks.cpp  check_threads.cpp  check_tween.cpp  destructor.cpp  themes.cpp
toon/: OSC.py  __init__.py  chromakey.py  ck_osc.ck  colorpicker.py  convolution.py  core.py  dialogs.py  draw.py  drawing.py  fudi.py  fx.py  index.rst  itoonloop.py  mencoder.py  midi.py  observer.py  old_bak.py  old_mkrss.py  opensoundcontrol.py  optgroup.py  puredata.py  rss.py  rst.py  runner.py  sampler.py  save.py  seq.py  serialize.py  start_chuck_osc_server.sh  start_osc.py  tween.py  utils.py  web.py  web_server.py
toon/data/: index.rst  ituner.pd  toonloop-launcher.glade  toonloop.fx.pd  toonloop.midi.pd  toonloopmidi.cfg
toon/effects/: brcosa.py  chromakey.py  cinelike.py  convolution.py  leavecolor.py  lumakey.py  noeffect.py  simplechroma.py  tester.py
toon/launcher/: __init__.py  cameras.py  gui.py  looper.py  process.py
toon/test/: test_optgroups.py  test_rss.py  test_sampler.py
toonloop/: Makefile.am  __init__.py  gui.py  launching.py  runner.py
toonloop_data/: __init__.pd
utils/: install_deps  install_maverick  install_oneiric  install_trusty  list_deps_version  toon-button  toon-frame-add  toon-frame-remove  toon-ping  toon-quit
